# HelioFrame

./: Cargo.toml  LICENSE  README.md  STRUCTURE.txt
configs/presets/: balanced.toml  experimental.toml  preview.toml  studio.toml
crates/helioframe-cli/: Cargo.toml
crates/helioframe-cli/src/: main.rs
crates/helioframe-core/: Cargo.toml
crates/helioframe-core/src/: config.rs  error.rs  lib.rs  manifest.rs  system.rs  types.rs
crates/helioframe-gui/: Cargo.toml
crates/helioframe-gui/src/: app.rs  main.rs  state.rs  theme.rs  widgets.rs
crates/helioframe-gui/src/panels/: about.rs  diagnostics.rs  mod.rs  progress.rs  settings.rs  sidebar.rs  upscale.rs
crates/helioframe-model/: Cargo.toml
crates/helioframe-model/src/: backend.rs  lib.rs  onnx.rs  plan.rs  quality.rs  traits.rs  worker.rs
crates/helioframe-pipeline/: Cargo.toml
crates/helioframe-pipeline/src/: lib.rs  logger.rs  orchestrator.rs  shots.rs  stages.rs  temporal_qc.rs  tiling.rs  windows.rs
crates/helioframe-video/: Cargo.toml
crates/helioframe-video/src/: decoder.rs  encoder.rs  lib.rs  probe.rs  stitch.rs
crates/helioframe-video/tests/: io_regression.rs  stitch_regression.rs
docs/: architecture.md  backend-ladder.md  quality-bar.md  research.md  roadmap.md  setup.md  worker-protocol.md
examples/: example-config.toml
models/: README.md
scripts/: benchmark.sh  fetch_ffmpeg.sh
tests/: README.md
tests/fixtures/: README.md  benchmark_clips.json  clip_recipes.json
tests/integration/: README.md  baseline_expectations.json  probe.rs  run_manifest_layout.md  stitch_expectations.json
workers/python/: README.md  worker.py
workers/python/backends/: __init__.py  detail_refiner.py  helioframe_master.py  realbasicvsr.py  seedvr_teacher.py  stcdit_studio.py
workers/python/schemas/: input_manifest.schema.json  output_manifest.schema.json
workers/python/tests/: test_worker.py
