[package]
name = "helioframe-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "helioframe-gui"
path = "src/main.rs"

[dependencies]
helioframe-core = { path = "../helioframe-core" }
helioframe-pipeline = { path = "../helioframe-pipeline" }
eframe = { version = "0.34.1", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.34.1"
egui_extras = { version = "0.34.1", features = ["image"] }
rfd = "0.15"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }
