[package]
name = "helioframe-model"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
helioframe-core = { path = "../helioframe-core" }
serde.workspace = true
serde_json.workspace = true
ort.workspace = true
image.workspace = true
ndarray.workspace = true
tracing.workspace = true
